--- a/src/components/WithdrawPage.scss
+++ b/src/components/WithdrawPage.scss
@@ -8,6 +8,11 @@ div.withdraw {
   padding-bottom: 40px;
   box-sizing: border-box; // Make the padding included in height calculation
 
+  .footerDiv {
+    width: 888px;
+    margin: 0 auto;
+  }
+
   .content {
     width: 888px;
     margin: 0 auto;
